// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox indeterminate renders correctly 1`] = `
.c0 .rovna-ui-checkbox {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c0 .rovna-ui-checkbox-indeterminate .rovna-ui-checkbox-inner:after {
  border-radius: 2px;
}

<label
  className="rovna-ui-checkbox-wrapper c0 css-dev-only-do-not-override-u64svk"
  style={{}}
>
  <span
    className="rovna-ui-checkbox rovna-ui-checkbox-indeterminate ant-wave-target css-dev-only-do-not-override-u64svk"
  >
    <input
      aria-checked="mixed"
      aria-label="Флажок"
      checked={false}
      className="rovna-ui-checkbox-input"
      data-testid="rovna-ui-checkbox"
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="rovna-ui-checkbox-inner"
    />
  </span>
</label>
`;

exports[`Checkbox renders correctly 1`] = `
.c0 .rovna-ui-checkbox {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c0 .rovna-ui-checkbox-indeterminate .rovna-ui-checkbox-inner:after {
  border-radius: 2px;
}

<label
  className="rovna-ui-checkbox-wrapper c0 css-dev-only-do-not-override-u64svk"
  style={{}}
>
  <span
    className="rovna-ui-checkbox ant-wave-target css-dev-only-do-not-override-u64svk"
  >
    <input
      aria-label="Флажок"
      checked={false}
      className="rovna-ui-checkbox-input"
      data-testid="rovna-ui-checkbox"
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="rovna-ui-checkbox-inner"
    />
  </span>
</label>
`;

exports[`Checkbox vertical renders correctly 1`] = `
.c1 .rovna-ui-checkbox {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c1 .rovna-ui-checkbox-indeterminate .rovna-ui-checkbox-inner:after {
  border-radius: 2px;
}

.c0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  row-gap: 8px;
}

.c0.rovna-ui-checkbox-group .rovna-ui-checkbox + span {
  overflow-wrap: anywhere;
}

<div
  className="rovna-ui-checkbox-group c0 css-dev-only-do-not-override-u64svk"
  role="group"
>
  <label
    className="rovna-ui-checkbox-wrapper c1 css-dev-only-do-not-override-u64svk"
    style={{}}
  >
    <span
      className="rovna-ui-checkbox ant-wave-target css-dev-only-do-not-override-u64svk"
    >
      <input
        checked={false}
        className="rovna-ui-checkbox-input"
        data-testid="rovna-ui-checkbox"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
        value="A"
      />
      <span
        className="rovna-ui-checkbox-inner"
      />
    </span>
    <span>
      Каменные материалы
    </span>
  </label>
  <label
    className="rovna-ui-checkbox-wrapper c1 css-dev-only-do-not-override-u64svk"
    style={{}}
  >
    <span
      className="rovna-ui-checkbox ant-wave-target css-dev-only-do-not-override-u64svk"
    >
      <input
        checked={false}
        className="rovna-ui-checkbox-input"
        data-testid="rovna-ui-checkbox"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
        value="B"
      />
      <span
        className="rovna-ui-checkbox-inner"
      />
    </span>
    <span>
      Растворы
    </span>
  </label>
  <label
    className="rovna-ui-checkbox-wrapper c1 css-dev-only-do-not-override-u64svk"
    style={{}}
  >
    <span
      className="rovna-ui-checkbox ant-wave-target css-dev-only-do-not-override-u64svk"
    >
      <input
        checked={false}
        className="rovna-ui-checkbox-input"
        data-testid="rovna-ui-checkbox"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
        value="C"
      />
      <span
        className="rovna-ui-checkbox-inner"
      />
    </span>
    <span>
      Металлы
    </span>
  </label>
</div>
`;
